# rust-auth-api

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
migrations/: 20240229185808_create_users_table.down.sql  20240229185808_create_users_table.up.sql  20240309201900_sessions.down.sql  20240309201900_sessions.up.sql
src/: auth.rs  authentication.rs  main.rs  router.rs  users.rs
src/auth/: handlers.rs  jwt.rs  model.rs
src/authentication/: handlers.rs  sessions.rs  state.rs
src/users/: handlers.rs  model.rs  schema.rs
