[package]
name = "auth-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
